feat(jvm): Update JVM note.
- Add some JVM paraemters usage.
- Format document.