@@ -1,6 +1,6 @@
 # JVM Note
 
-## 一.JVM与Java体系结构
+## 一.JVM 与 Java 体系结构
 
 ### 1.JVM 的架构模型
 
@@ -12,17 +12,17 @@
 
 2.执行
 
-- 一个运行中的java虚拟机有着一个清晰的任务：执行Java程序；
+- 一个运行中的 java 虚拟机有着一个清晰的任务：执行 Java 程序；
 - 程序开始执行的时候他才运行，程序结束时他就停止；
-- 执行一个所谓的Java程序的时候，真真正正在执行的是一个叫做Java虚拟机的进程。
+- 执行一个所谓的 Java 程序的时候，真真正正在执行的是一个叫做 Java 虚拟机的进程。
 
-3.退出
+  3.退出
 
 - 程序正常执行结束
 - 程序异常或错误而异常终止
 - 操作系统错误导致终止
-- 某线程调用Runtime类或System类的exit方法，或Runtime类的halt方法，并且java安全管理器也允许这次exit或halt操作
-- 除此之外，JNI规范描述了用JNI Invocation API来加载或卸载Java虚拟机时，Java虚拟机的退出情况
+- 某线程调用 Runtime 类或 System 类的 exit 方法，或 Runtime 类的 halt 方法，并且 java 安全管理器也允许这次 exit 或 halt 操作
+- 除此之外，JNI 规范描述了用 JNI Invocation API 来加载或卸载 Java 虚拟机时，Java 虚拟机的退出情况
 
 ### 3.JVM 的发展历史
 
@@ -35,155 +35,155 @@
 
 #### Exact VM
 
-1.为了解决上一个虚拟机问题，jdk1.2时，Sun提供了此虚拟机。
+1.为了解决上一个虚拟机问题，jdk1.2 时，Sun 提供了此虚拟机。
 
 2.Exact Memory Management：准确式内存管理
 
-- 也可以叫Non-Conservative/Accurate Memory Management
+- 也可以叫 Non-Conservative/Accurate Memory Management
 - 虚拟机可以知道内存中某个位置的数据具体是什么类型。
 
-3.具备现代高性能虚拟机的维形
+  3.具备现代高性能虚拟机的维形
 
 - 热点探测（寻找出热点代码进行缓存）
 - 编译器与解释器混合工作模式
 
-4.只在Solaris平台短暂使用，其他平台上还是classic vm，英雄气短，终被Hotspot虚拟机替换
+  4.只在 Solaris 平台短暂使用，其他平台上还是 classic vm，英雄气短，终被 Hotspot 虚拟机替换
 
 #### HotSpot VM
 
-1.HotSpot历史
+1.HotSpot 历史
 
 - 最初由一家名为“Longview Technologies”的小公司设计
-- 1997年，此公司被Sun收购；2009年，Sun公司被甲骨文收购。
-- JDK1.3时，HotSpot VM成为默认虚拟机
+- 1997 年，此公司被 Sun 收购；2009 年，Sun 公司被甲骨文收购。
+- JDK1.3 时，HotSpot VM 成为默认虚拟机
 
-2.目前Hotspot占有绝对的市场地位，称霸武林。
+  2.目前 Hotspot 占有绝对的市场地位，称霸武林。
 
-- 不管是现在仍在广泛使用的JDK6，还是使用比例较多的JDK8中，默认的虚拟机都是HotSpot
-- Sun/oracle JDK和openJDK的默认虚拟机
-- 因此本课程中默认介绍的虚拟机都是HotSpot，相关机制也主要是指HotSpot的GC机制。（比如其他两个商用虚机都没有方法区的概念）
+- 不管是现在仍在广泛使用的 JDK6，还是使用比例较多的 JDK8 中，默认的虚拟机都是 HotSpot
+- Sun/oracle JDK 和 openJDK 的默认虚拟机
+- 因此本课程中默认介绍的虚拟机都是 HotSpot，相关机制也主要是指 HotSpot 的 GC 机制。（比如其他两个商用虚机都没有方法区的概念）
 
-3.从服务器、桌面到移动端、嵌入式都有应用。
+  3.从服务器、桌面到移动端、嵌入式都有应用。
 
-4.名称中的HotSpot指的就是它的热点代码探测技术。
+  4.名称中的 HotSpot 指的就是它的热点代码探测技术。
 
 - 通过计数器找到最具编译价值代码，触发即时编译或栈上替换
 - 通过编译器与解释器协同工作，在最优化的程序响应时间与最佳执行性能中取得平衡
 
 #### JRockit（商用三大虚拟机之一）
 
-1.专注于服务器端应用：它可以不太关注程序启动速度，因此JRockit内部不包含解析器实现，全部代码都靠即时编译器编译后执行。
+1.专注于服务器端应用：它可以不太关注程序启动速度，因此 JRockit 内部不包含解析器实现，全部代码都靠即时编译器编译后执行。
 
-2.大量的行业基准测试显示，JRockit JVM是世界上最快的JVM：使用JRockit产品，客户已经体验到了显著的性能提高（一些超过了70%）和硬件成本的减少（达50%）。
+2.大量的行业基准测试显示，JRockit JVM 是世界上最快的 JVM：使用 JRockit 产品，客户已经体验到了显著的性能提高（一些超过了 70%）和硬件成本的减少（达 50%）。
 
-3.优势：全面的Java运行时解决方案组合
+3.优势：全面的 Java 运行时解决方案组合
 
-- JRockit面向延迟敏感型应用的解决方案JRockit Real Time提供以毫秒或微秒级的JVM响应时间，适合财务、军事指挥、电信网络的需要
-- Mission Control服务套件，它是一组以极低的开销来监控、管理和分析生产环境中的应用程序的工具。
+- JRockit 面向延迟敏感型应用的解决方案 JRockit Real Time 提供以毫秒或微秒级的 JVM 响应时间，适合财务、军事指挥、电信网络的需要
+- Mission Control 服务套件，它是一组以极低的开销来监控、管理和分析生产环境中的应用程序的工具。
 
-4.2008年，JRockit被Oracle收购。
+  4.2008 年，JRockit 被 Oracle 收购。
 
-5.Oracle表达了整合两大优秀虚拟机的工作，大致在JDK8中完成。整合的方式是在HotSpot的基础上，移植JRockit的优秀特性。
+  5.Oracle 表达了整合两大优秀虚拟机的工作，大致在 JDK8 中完成。整合的方式是在 HotSpot 的基础上，移植 JRockit 的优秀特性。
 
-#### IBM的J9（商用三大虚拟机之一）
+#### IBM 的 J9（商用三大虚拟机之一）
 
-1. 全称：IBM Technology for Java Virtual Machine，简称IT4J，内部代号：J9
-2. 市场定位与HotSpot接近，服务器端、桌面应用、嵌入式等多用途VM广泛用于IBM的各种Java产品。
-3. 目前，有影响力的三大商用虚拟机之一，也号称是世界上最快的Java虚拟机。
-4. 2017年左右，IBM发布了开源J9VM，命名为openJ9，交给Eclipse基金会管理，也称为Eclipse OpenJ9
-5. OpenJDK -> 是JDK开源了，包括了虚拟机
+1. 全称：IBM Technology for Java Virtual Machine，简称 IT4J，内部代号：J9
+2. 市场定位与 HotSpot 接近，服务器端、桌面应用、嵌入式等多用途 VM 广泛用于 IBM 的各种 Java 产品。
+3. 目前，有影响力的三大商用虚拟机之一，也号称是世界上最快的 Java 虚拟机。
+4. 2017 年左右，IBM 发布了开源 J9VM，命名为 openJ9，交给 Eclipse 基金会管理，也称为 Eclipse OpenJ9
+5. OpenJDK -> 是 JDK 开源了，包括了虚拟机
 
-#### KVM和CDC/CLDC Hotspot
+#### KVM 和 CDC/CLDC Hotspot
 
-1.Oracle在Java ME产品线上的两款虚拟机为：CDC/CLDC HotSpot Implementation VM
+1.Oracle 在 Java ME 产品线上的两款虚拟机为：CDC/CLDC HotSpot Implementation VM
 
-2.KVM（Kilobyte）是CLDC-HI早期产品
+2.KVM（Kilobyte）是 CLDC-HI 早期产品
 
-3.目前移动领域地位尴尬，智能机被Android和iOS二分天下。
+3.目前移动领域地位尴尬，智能机被 Android 和 iOS 二分天下。
 
-4.KVM简单、轻量、高度可移植，面向更低端的设备上还维持自己的一片市场
+4.KVM 简单、轻量、高度可移植，面向更低端的设备上还维持自己的一片市场
 
 - 智能控制器、传感器
 - 老人手机、经济欠发达地区的功能手机
 
-5.所有的虚拟机的原则：一次编译，到处运行。
+  5.所有的虚拟机的原则：一次编译，到处运行。
 
 #### Azul VM（饿了吗）
 
-1. 前面三大“高性能Java虚拟机”使用在通用硬件平台上
-2. 这里Azul VW和BEA Liquid VM是与特定硬件平台绑定、软硬件配合的专有虚拟机：高性能Java虚拟机中的战斗机。
-3. Azul VM是Azul Systems公司在HotSpot基础上进行大量改进，运行于Azul Systems公司的专有硬件Vega系统上的Java虚拟机。
-4. 每个Azul VM实例都可以管理至少数十个CPU和数百GB内存的硬件资源，并提供在巨大内存范围内实现可控的GC时间的垃圾收集器、专有硬件优化的线程调度等优秀特性。
-5. 2010年，Azul Systems公司开始从硬件转向软件，发布了自己的Zing JVM，可以在通用x86平台上提供接近于Vega系统的特性。
+1. 前面三大“高性能 Java 虚拟机”使用在通用硬件平台上
+2. 这里 Azul VW 和 BEA Liquid VM 是与特定硬件平台绑定、软硬件配合的专有虚拟机：高性能 Java 虚拟机中的战斗机。
+3. Azul VM 是 Azul Systems 公司在 HotSpot 基础上进行大量改进，运行于 Azul Systems 公司的专有硬件 Vega 系统上的 Java 虚拟机。
+4. 每个 Azul VM 实例都可以管理至少数十个 CPU 和数百 GB 内存的硬件资源，并提供在巨大内存范围内实现可控的 GC 时间的垃圾收集器、专有硬件优化的线程调度等优秀特性。
+5. 2010 年，Azul Systems 公司开始从硬件转向软件，发布了自己的 Zing JVM，可以在通用 x86 平台上提供接近于 Vega 系统的特性。
 
 #### Liquid VM
 
-1. 高性能Java虚拟机中的战斗机。
-2. BEA公司开发的，直接运行在自家Hypervisor系统上
-3. Liquid VM即是现在的JRockit VE（Virtual Edition）。Liquid VM不需要操作系统的支持，或者说它自己本身实现了一个专用操作系统的必要功能，如线程调度、文件系统、网络支持等。
-4. 随着JRockit虚拟机终止开发，Liquid vM项目也停止了。
+1. 高性能 Java 虚拟机中的战斗机。
+2. BEA 公司开发的，直接运行在自家 Hypervisor 系统上
+3. Liquid VM 即是现在的 JRockit VE（Virtual Edition）。Liquid VM 不需要操作系统的支持，或者说它自己本身实现了一个专用操作系统的必要功能，如线程调度、文件系统、网络支持等。
+4. 随着 JRockit 虚拟机终止开发，Liquid vM 项目也停止了。
 
 #### Apache Marmony
 
-1. pache也曾经推出过与JDK1.5和JDK1.6兼容的Java运行平台Apache Harmony。
-2. 它是IElf和Intel联合开发的开源JVM，受到同样开源的Open JDK的压制，Sun坚决不让Harmony获得JCP认证，最终于2011年退役，IBM转而参与OpenJDK
-3. 虽然目前并没有Apache Harmony被大规模商用的案例，但是它的Java类库代码吸纳进了Android SDK。
+1. pache 也曾经推出过与 JDK1.5 和 JDK1.6 兼容的 Java 运行平台 Apache Harmony。
+2. 它是 IElf 和 Intel 联合开发的开源 JVM，受到同样开源的 Open JDK 的压制，Sun 坚决不让 Harmony 获得 JCP 认证，最终于 2011 年退役，IBM 转而参与 OpenJDK
+3. 虽然目前并没有 Apache Harmony 被大规模商用的案例，但是它的 Java 类库代码吸纳进了 Android SDK。
 
 #### Micorsoft JVM
 
-1. 微软为了在IE3浏览器中支持Java Applets，开发了Microsoft JVM。
-2. 只能在window平台下运行。但确是当时Windows下性能最好的Java VM。
-3. 1997年，Sun以侵犯商标、不正当竞争罪名指控微软成功，赔了Sun很多钱。微软WindowsXP SP3中抹掉了其VM。现在Windows上安装的jdk都是HotSpot。
+1. 微软为了在 IE3 浏览器中支持 Java Applets，开发了 Microsoft JVM。
+2. 只能在 window 平台下运行。但确是当时 Windows 下性能最好的 Java VM。
+3. 1997 年，Sun 以侵犯商标、不正当竞争罪名指控微软成功，赔了 Sun 很多钱。微软 WindowsXP SP3 中抹掉了其 VM。现在 Windows 上安装的 jdk 都是 HotSpot。
 
 #### Taobao JVM
 
-1.由AliJVM团队发布。阿里，国内使用Java最强大的公司，覆盖云计算、金融、物流、电商等众多领域，需要解决高并发、高可用、分布式的复合问题。有大量的开源产品。
+1.由 AliJVM 团队发布。阿里，国内使用 Java 最强大的公司，覆盖云计算、金融、物流、电商等众多领域，需要解决高并发、高可用、分布式的复合问题。有大量的开源产品。
 
-2.基于OpenJDK开发了自己的定制版本AlibabaJDK，简称AJDK。是整个阿里Java体系的基石。
+2.基于 OpenJDK 开发了自己的定制版本 AlibabaJDK，简称 AJDK。是整个阿里 Java 体系的基石。
 
-3.基于OpenJDK Hotspot VM发布的国内第一个优化、深度定制且开源的高性能服务器版Java虚拟机。
+3.基于 OpenJDK Hotspot VM 发布的国内第一个优化、深度定制且开源的高性能服务器版 Java 虚拟机。
 
-- 创新的GCIH（GCinvisible heap）技术实现了off-heap，即将生命周期较长的Java对象从heap中移到heap之外，并且GC不能管理GCIH内部的Java对象，以此达到降低GC的回收频率和提升GC的回收效率的目的。
-- GCIH中的对象还能够在多个Java虚拟机进程中实现共享
-- 使用crc32指令实现JvM intrinsic降低JNI的调用开销
-- PMU hardware的Java profiling tool和诊断协助功能
-- 针对大数据场景的ZenGC
+- 创新的 GCIH（GCinvisible heap）技术实现了 off-heap，即将生命周期较长的 Java 对象从 heap 中移到 heap 之外，并且 GC 不能管理 GCIH 内部的 Java 对象，以此达到降低 GC 的回收频率和提升 GC 的回收效率的目的。
+- GCIH 中的对象还能够在多个 Java 虚拟机进程中实现共享
+- 使用 crc32 指令实现 JvM intrinsic 降低 JNI 的调用开销
+- PMU hardware 的 Java profiling tool 和诊断协助功能
+- 针对大数据场景的 ZenGC
 
-4.taobao vm应用在阿里产品上性能高，硬件严重依赖inte1的cpu，损失了兼容性，但提高了性能
+  4.taobao vm 应用在阿里产品上性能高，硬件严重依赖 inte1 的 cpu，损失了兼容性，但提高了性能
 
-- 目前已经在淘宝、天猫上线，把Oracle官方JvM版本全部替换了。
+- 目前已经在淘宝、天猫上线，把 Oracle 官方 JvM 版本全部替换了。
 
 #### Dalvik VM
 
-1.谷歌开发的，应用于Android系统，并在Android2.2中提供了JIT，发展迅猛。
+1.谷歌开发的，应用于 Android 系统，并在 Android2.2 中提供了 JIT，发展迅猛。
 
-2.Dalvik VM只能称作虚拟机，而不能称作“Java虚拟机”，它没有遵循 Java虚拟机规范
+2.Dalvik VM 只能称作虚拟机，而不能称作“Java 虚拟机”，它没有遵循 Java 虚拟机规范
 
-3.不能直接执行Java的Class文件
+3.不能直接执行 Java 的 Class 文件
 
-4.基于寄存器架构，不是jvm的栈架构。
+4.基于寄存器架构，不是 jvm 的栈架构。
 
-5.执行的是编译以后的dex（Dalvik Executable）文件。执行效率比较高。
+5.执行的是编译以后的 dex（Dalvik Executable）文件。执行效率比较高。
 
-- 它执行的dex（Dalvik Executable）文件可以通过class文件转化而来，使用Java语法编写应用程序，可以直接使用大部分的Java API等。
+- 它执行的 dex（Dalvik Executable）文件可以通过 class 文件转化而来，使用 Java 语法编写应用程序，可以直接使用大部分的 Java API 等。
 
-6.Android 5.0使用支持提前编译（Ahead of Time Compilation，AoT）的ART VM替换Dalvik VM。
+  6.Android 5.0 使用支持提前编译（Ahead of Time Compilation，AoT）的 ART VM 替换 Dalvik VM。
 
 #### Graal VM（未来虚拟机）
 
-1. 2018年4月，Oracle Labs公开了GraalvM，号称 “Run Programs Faster Anywhere”，勃勃野心。与1995年java的”write once，run anywhere"遥相呼应。
+1. 2018 年 4 月，Oracle Labs 公开了 GraalvM，号称 “Run Programs Faster Anywhere”，勃勃野心。与 1995 年 java 的”write once，run anywhere"遥相呼应。
 
-2. GraalVM在HotSpot VM基础上增强而成的**跨语言全栈虚拟机，可以作为“任何语言”**的运行平台使用。语言包括：Java、Scala、Groovy、Kotlin；C、C++、Javascript、Ruby、Python、R等
+2. GraalVM 在 HotSpot VM 基础上增强而成的**跨语言全栈虚拟机，可以作为“任何语言”**的运行平台使用。语言包括：Java、Scala、Groovy、Kotlin；C、C++、Javascript、Ruby、Python、R 等
 
 3. 支持不同语言中混用对方的接口和对象，支持这些语言使用已经编写好的本地库文件
 
-4. 工作原理是将这些语言的源代码或源代码编译后的中间格式，通过解释器转换为能被Graal VM接受的中间表示。Graal VM提供Truffle工具集快速构建面向一种新语言的解释器。在运行时还能进行即时编译优化，获得比原生编译器更优秀的执行效率。
+4. 工作原理是将这些语言的源代码或源代码编译后的中间格式，通过解释器转换为能被 Graal VM 接受的中间表示。Graal VM 提供 Truffle 工具集快速构建面向一种新语言的解释器。在运行时还能进行即时编译优化，获得比原生编译器更优秀的执行效率。
 
-5. 如果说HotSpot有一天真的被取代，Graalvm希望最大。但是Java的软件生态没有丝毫变化。
+5. 如果说 HotSpot 有一天真的被取代，Graalvm 希望最大。但是 Java 的软件生态没有丝毫变化。
 
 #### 总结
 
-具体JVM的内存结构，其实取决于其实现，不同厂商的JVM，或者同一厂商发布的不同版本，都有可能存在一定差异。主要以Oracle HotSpot VM为默认虚拟机。
+具体 JVM 的内存结构，其实取决于其实现，不同厂商的 JVM，或者同一厂商发布的不同版本，都有可能存在一定差异。主要以 Oracle HotSpot VM 为默认虚拟机。
 
 ## 二.类加载子系统
 
@@ -200,7 +200,7 @@ TODO 详细图
 
 1. 类加载器子系统负责从文件系统或者网络中加载 Class 文件，class 文件在文件开头有特定的文件标识。
 2. ClassLoader 只负责 class 文件的加载，至于它是否可以运行，则由 Execution Engine 决定。
-3. **加载的类信息存放于一块称为方法区的内存空间**。除了类的信息外，方法区中还会存放运行时常量池信息，可能还包括字符串字面量和数字常量（这部分常量信息是Class文件中常量池部分的内存映射）
+3. **加载的类信息存放于一块称为方法区的内存空间**。除了类的信息外，方法区中还会存放运行时常量池信息，可能还包括字符串字面量和数字常量（这部分常量信息是 Class 文件中常量池部分的内存映射）
 
 #### 类加载的过程
 
@@ -210,16 +210,16 @@ TODO 详细图
 
 1. 通过一个类的全限定名获取定义此类的二进制字节流
 2. 将这个字节流所代表的静态存储结构转化为方法区的运行时数据结构
-3. 在内存中生成一个代表这个类的java.lang.Class对象，作为方法区这个类的各种数据的访问入口
+3. 在内存中生成一个代表这个类的 java.lang.Class 对象，作为方法区这个类的各种数据的访问入口
 
-**加载class文件的方式：**
+**加载 class 文件的方式：**
 
 1. 从本地系统中直接加载
 2. 通过网络获取，典型场景：Web Applet
-3. 从zip压缩包中读取，成为日后jar、war格式的基础
+3. 从 zip 压缩包中读取，成为日后 jar、war 格式的基础
 4. 运行时计算生成，使用最多的是：动态代理技术
-5. 由其他文件生成，典型场景：JSP应用从专有数据库中提取.class文件，比较少见
-6. 从加密文件中获取，典型的防Class文件被反编译的保护措施
+5. 由其他文件生成，典型场景：JSP 应用从专有数据库中提取.class 文件，比较少见
+6. 从加密文件中获取，典型的防 Class 文件被反编译的保护措施
 
 ##### Linking
 
@@ -227,7 +227,7 @@ TODO 详细图
 
 **验证(Verify)**:
 
-1. 目的在于确保Class文件的字节流中包含信息符合当前虚拟机要求，保证被加载类的正确性，不会危害虚拟机自身安全
+1. 目的在于确保 Class 文件的字节流中包含信息符合当前虚拟机要求，保证被加载类的正确性，不会危害虚拟机自身安全
 2. 主要包括四种验证，文件格式验证，元数据验证，字节码验证，符号引用验证。
 
 查看字节码文件，其开头均为 CAFE BABE ，如果出现不合法的字节码文件，那么将会验证不通过。
@@ -236,11 +236,11 @@ TODO 详细图
 
 **准备(Prepare)**:
 
-1. 为类变量（static变量）分配内存并且设置该类变量的默认初始值，即零值
-2. 这里不包含用final修饰的static，因为final在编译的时候就会分配好了默认值，准备阶段会显式初始化
-3. 注意：这里不会为**实例变量**分配初始化，**类变量**会分配在方法区中，而实例变量是会随着对象一起分配到Java堆中
+1. 为类变量（static 变量）分配内存并且设置该类变量的默认初始值，即零值
+2. 这里不包含用 final 修饰的 static，因为 final 在编译的时候就会分配好了默认值，准备阶段会显式初始化
+3. 注意：这里不会为**实例变量**分配初始化，**类变量**会分配在方法区中，而实例变量是会随着对象一起分配到 Java 堆中
 
-变量a在准备阶段会赋初始值，但不是1，而是0，在初始化阶段会被赋值为 1
+变量 a 在准备阶段会赋初始值，但不是 1，而是 0，在初始化阶段会被赋值为 1
 
 ```java
 public class HelloApp {
@@ -255,9 +255,9 @@ public class HelloApp {
 **解析(Resolve)**:
 
 1. **将常量池内的符号引用转换为直接引用的过程**
-2. 事实上，解析操作往往会伴随着JVM在执行完初始化之后再执行
-3. 符号引用就是一组符号来描述所引用的目标。符号引用的字面量形式明确定义在《java虚拟机规范》的class文件格式中。直接引用就是直接指向目标的指针、相对偏移量或一个间接定位到目标的句柄
-4. 解析动作主要针对类或接口、字段、类方法、接口方法、方法类型等。对应常量池中的CONSTANT Class info、CONSTANT Fieldref info、CONSTANT Methodref info等
+2. 事实上，解析操作往往会伴随着 JVM 在执行完初始化之后再执行
+3. 符号引用就是一组符号来描述所引用的目标。符号引用的字面量形式明确定义在《java 虚拟机规范》的 class 文件格式中。直接引用就是直接指向目标的指针、相对偏移量或一个间接定位到目标的句柄
+4. 解析动作主要针对类或接口、字段、类方法、接口方法、方法类型等。对应常量池中的 CONSTANT Class info、CONSTANT Fieldref info、CONSTANT Methodref info 等
 
 **符号引用**:
 
@@ -334,6 +334,10 @@ jstat [-gc] pid   # show gc status of specificate pid
 jinfo -flag [JVM XX parameter] pid   # show the flag of pid
 ```
 
+### jmap
+
+Export dump file.
+
 ## JVM Parameters
 
 ### -Xss
@@ -358,4 +362,53 @@ Max heap memory size
 
 ```bash
 -Xmx600m
+```
+
+### -Xmn
+
+Young generation memory size. Priority is higher than `-XX:NewRatio` parameter.
+
+```bash
+-Xmn100m
+```
+
+### -XX:NewRatio
+
+The old generation and young generation memory size ratio. Default value is 2.
+
+```bash
+-XX:NewRatio=2
+```
+
+### -XX:SurvivorRatio
+
+The Eden and Survivor generation memory size ratio.Default ratio is 8.
+Because of Adaptive Memory Size Policy, the ratio between Eden and Survivor generation is not the default value. You must set `SurvivorRatio` to 8 obviously， then the ratio can take effect.
+
+```bash
+-XX:SurvivorRatio=8
+```
+
+### -XX:-UseAdaptiveSizePolicy
+
+Disable Adaptive memory size policy.(Not effection, Need set ratio)
+
+```bash
+-XX:-UseAdaptiveSizePolicy
+```
+
+### -XX:+PrintGCDetails
+
+Print GC Details Infomation after JVM instance stop.
+
+```bash
+-XX:+PrintGCDetails
+```
+
+### -XX:MaxTenuringThreshold
+
+The threshold which time to promote the survivor object ot tenuring generation.
+
+```bash
+-XX:MaxTenuringThreshold=15
 ```
